--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,17 @@
             android:name=".ui.MapActivityDeal"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+
+        <!--widget provider-->
+        <receiver android:name=".provider.MyWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/appwidget_info" />
+        </receiver>
+
     </application>
 
 </manifest>
